# open-core

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: build.yml  python-app.yml  test.yml  tests.yml  workflow.yml
example/: pub_sub.py
src/actor/: AbstractActor.py  __init__.py
src/actor/serializer/: AbstractSerializer.py  Json.py  MessagePack.py  Pickle.py  __init__.py
src/actor/socket_manager/: SocketManager.py  __init__.py
src/actor/utils/: __init__.py  start_actor.py
tests/src/actor/: conftest.py  test_AbstractActor.py
tests/src/actor/serializer/: conftest.py  test_Json.py
tests/src/actor/socket_manager/: test_SocketManager.py
