[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-core"
version = "0.3.3"
description = "Event-based processing framework."
readme = "README.md"
authors = [{ name = "Thomas Cercato", email = "thomas.cercato@gmail.com" }]
license = { text = "GPL-3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "msgspec~=0.18.6",
    "pyzmq~=26.1.0",
    "uvloop~=0.20.0; platform_system != 'Windows'"
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.2",
    "pytest-asyncio~=0.23.8",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.14.0",
    "ruff~=0.6.2",
]

[tool.setuptools]
packages = { find = { exclude = ["asset", "example", "tests"] } }